[package]
name = "finq"
version = "0.1.0"
edition = "2021"

[dependencies]
zei = { git = "https://github.com/FindoraNetwork/zei", tag = "v0.1.4e" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
ruc = "0.6"
ed25519-dalek = "1.0"
reqwest = "0.11.8"
tokio = "1.15.0"
