[package]
name = "finq"
version = "0.1.0"
edition = "2021"

[dependencies]
ruc = "0.6"
once_cell = "1.9"
ed25519-dalek = "1.0"

bech32 = "0.7.2"
base64 = "0.13.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0.4", features = ["derive"] }
attohttpc = { version = "0.18", default-features = false, features = ["compress","json","rustls"]}

zei = { git = "https://github.com/FindoraNetwork/zei", tag = "v0.1.4e" }
